2009-10-29  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Honor DESTDIR for winsup/mingw and winsup/w32api.
	Detect and report error if installation paths are win32
	format, but DESTDIR is non-empty.

	* Makefile.in (DESTDIR): Honor per convention.
	(need-DESTDIR-compatibility): New macro; define it and a
	corresponding rule.
	(fail-DESTDIR-compatibility): New dependency goal.
	(install-dirs): Require need-DESTDIR-compatibility.
	* mingwex/Makefile.in (DESTDIR): Honor per convention.
	(need-DESTDIR-compatibility): New macro; define it and a
	corresponding rule.
	(fail-DESTDIR-compatibility): New dependency goal.
	(install): Require need-DESTDIR-compatibility.
	* profile/Makefile.in: Ditto.

2009-10-25  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Sync pseudo-reloc.c with mingw64
	* psuedo-reloc.c: Remove unnecessary includes.
	Forward declare _pei386_runtime_relocator.
	Decorate _image_base__ symbol with macro for
	mingw64 compatibility. Whitespace changes.
	(__print_reloc_error): Renamed to...
	(__report_error): This. "Returns" void, and
	always aborts. Now used on all platforms.
	(__write_memory): Remove special case error handling
	for different platforms - always call __report_error.
	(do_pseudo_reloc): Remove special case error handling
	for different platforms - always call __report_error.
	(_pei386_runtime_relocator): Decorate _image_base__
	symbol with mingw64 compatibility macro.

2009-10-23  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Sync pseudo-reloc.c with cygwin/lib/
	* pseudo-reloc.c [CYGWIN]: Added comments throughout and various
	whitespace fixes. Exploit cygwin_internal(CW_EXIT_PROCESS,...)
	for fatal error handling that is consistent with cygwin process
	life-cycle. Ensure state variable (in _pei386_runtime_relocator)
	is unique to each address space, across fork().
	[CYGWIN] (__print_reloc_error): New function for reporting
	errors in a manner supported by cygwin at this early stage of
	the process life-cycle.