@@ -93,7 +93,8 @@ __report_error (const char *msg, ...)
   char buf[SHORT_MSG_BUF_SZ];
   wchar_t module[MAX_PATH];
   char * posix_module = NULL;
-  static const char * UNKNOWN_MODULE = "<unknown module>: ";
+  static const char   UNKNOWN_MODULE[] = "<unknown module>: ";
+  static const size_t UNKNOWN_MODULE_LEN = sizeof (UNKNOWN_MODULE) - 1;
   static const char   CYGWIN_FAILURE_MSG[] = "Cygwin runtime failure: ";
   static const size_t CYGWIN_FAILURE_MSG_LEN = sizeof (CYGWIN_FAILURE_MSG) - 1;
   DWORD len;
@@ -130,7 +131,7 @@ __report_error (const char *msg, ...)
       WriteFile (errh, (PCVOID)CYGWIN_FAILURE_MSG,
                  CYGWIN_FAILURE_MSG_LEN, &done, NULL);
       WriteFile (errh, (PCVOID)UNKNOWN_MODULE,
-                 sizeof(UNKNOWN_MODULE), &done, NULL);
+                 UNKNOWN_MODULE_LEN, &done, NULL);
       WriteFile (errh, (PCVOID)buf, len, &done, NULL);
     }
   WriteFile (errh, (PCVOID)"\n", 1, &done, NULL);
