@@ -1,3 +1,9 @@
+2009-11-02  Charles Wilson  <mingw@cwilson.fastmail.fm>
+
+	Final sync of pseudo-reloc.c with mingw64 and cygwin
+	* lib/pseudo-reloc.c (__report_error) [CYGWIN]: Correct size bug
+	regarding error messages.
+
 2009-10-29  Charles Wilson  <mingw@cwilson.fastmail.fm>
 
 	Honor DESTDIR for winsup/mingw and winsup/w32api.
